force-app/main/default/objects/BatchRegistry__mdt/BatchRegistry__mdt.object-meta.xml
<CustomObject>
    <label>Batch Registry</label>
    <pluralLabel>Batch Registry</pluralLabel>
</CustomObject>