force-app/main/default/objects/BatchRegistry__mdt/fields/BatchSize__c.field-meta.xml
<CustomField>
    <fullName>BatchSize__c</fullName>
    <label>Batch Size</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>