force-app/main/default/objects/BatchRegistry__mdt/fields/QueryString__c.field-meta.xml
<CustomField>
    <fullName>QueryString__c</fullName>
    <label>Query String</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>